# SENG4800

./: .gitignore  HVCCC2.VC.db  HVCCC2.sln  HVCCC2.uproject  README Content Structure.txt  README.md  TimeScaleDemo.sln  TimeScaleDemo.uproject  TinyXML2Testing.sln  UpgradeLog.htm
Source/HVCCC2/data/: CMakeLists.txt  LogDataFunctor.cpp  LogDataFunctor.h  Making sure all XML files have one root element and number of lines.txt  README.md  StateInfo.json  TinyXML2Testing.cpp  convertData.cpp  convertData.h  env_config.h  env_configEXAMPLE.h  loadData.cpp  loadData.h  serialization.cpp  serialization.h  util.h
Source/HVCCC2/data/extraction/: CMakeLists.txt  StateTraits.h  TerminalId.cpp  TerminalId.h  extractData.cpp  extractData.h  implementedEntities.h  implementedTraits.h  logStates.cpp  logStates.h
Source/HVCCC2/data/extraction/Dumpstation/: Dumpstation.cpp  Dumpstation.h  DumpstationEvent.cpp  DumpstationEvent.h  DumpstationEventType.cpp  DumpstationEventType.h  DumpstationState.cpp  DumpstationState.h  DumpstationStateTraits.h  DumpstationStateType.cpp  DumpstationStateType.h
Source/HVCCC2/data/extraction/Loadpoints/: Loadpoints.cpp  Loadpoints.h  LoadpointsEvent.cpp  LoadpointsEvent.h  LoadpointsEventType.cpp  LoadpointsEventType.h  LoadpointsState.cpp  LoadpointsState.h  LoadpointsStateTraits.h  LoadpointsStateType.cpp  LoadpointsStateType.h
Source/HVCCC2/data/extraction/Reclaimer/: Reclaimer.cpp  Reclaimer.h  (+9 more)
Source/HVCCC2/data/python/: data_structures.py  generate_code.py  put_parts_of_rail_event_logs_XML_in_split_files.py  remove_all_events_not_belonging_to_one_entity.py  resolve_attributes.py  split_schedule_file_into_one_for_each_unique_entity.py  strip_all_events_not_belonging_to_one_entity.py  testing.xml
Source/HVCCC2/data/simulation/: SimulationData.h  StockpileData.cpp  StockpileData.h  VesselData.cpp  VesselData.h
Source/HVCCC2/data/tinyxml2/: tinyxml2.cpp  tinyxml2.h
(+1309 files in other folders)
